styles/index-style.css
@font-face { /* FW: 300, FS: normal */
    font-family: 'IBM Plex Sans';
    src: url('../fonts/IBM_Plex_Sans/IBMPlexSans-Light.woff2') format('woff2'),
        url('../fonts/IBM_Plex_Sans/IBMPlexSans-Light.woff') format('woff');
    font-weight: 300;
    font-style: normal;
    font-display: swap;
}

@font-face { /* FW: 300, FS: italic */
    font-family: 'IBM Plex Sans';
    src: url('../fonts/IBM_Plex_Sans/IBMPlexSans-LightItalic.woff2') format('woff2'),
        url('../fonts/IBM_Plex_Sans/IBMPlexSans-LightItalic.woff') format('woff');
    font-weight: 300;
    font-style: italic;
    font-display: swap;
}

@font-face { /* FW: normal, FS: normal */
    font-family: 'IBM Plex Sans';
    src: url('../fonts/IBM_Plex_Sans/IBMPlexSans-Regular.woff2') format('woff2'),
        url('../fonts/IBM_Plex_Sans/IBMPlexSans-Regular.woff') format('woff');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

@font-face { /* FW: normal, FS: italic */
    font-family: 'IBM Plex Sans';
    src: url('../fonts/IBM_Plex_Sans/IBMPlexSans-Italic.woff2') format('woff2'),
        url('../fonts/IBM_Plex_Sans/IBMPlexSans-Italic.woff') format('woff');
    font-weight: normal;
    font-style: italic;
    font-display: swap;
}

@font-face { /* FW: 600, FS: normal */
    font-family: 'IBM Plex Sans';
    src: url('../fonts/IBM_Plex_Sans/IBMPlexSans-SemiBold.woff2') format('woff2'),
        url('../fonts/IBM_Plex_Sans/IBMPlexSans-SemiBold.woff') format('woff');
    font-weight: 600;
    font-style: normal;
    font-display: swap;
}

@font-face { /* FW: 600, FS: italic */
    font-family: 'IBM Plex Sans';
    src: url('../fonts/IBM_Plex_Sans/IBMPlexSans-SemiBoldItalic.woff2') format('woff2'),
        url('../fonts/IBM_Plex_Sans/IBMPlexSans-SemiBoldItalic.woff') format('woff');
    font-weight: 600;
    font-style: italic;
    font-display: swap;
}

@font-face { /* FW: bold, FS: normal */
    font-family: 'IBM Plex Sans';
    src: url('../fonts/IBM_Plex_Sans/IBMPlexSans-Bold.woff2') format('woff2'),
        url('../fonts/IBM_Plex_Sans/IBMPlexSans-Bold.woff') format('woff');
    font-weight: bold;
    font-style: normal;
    font-display: swap;
}

@font-face { /* FW: bold, FS: italic */
    font-family: 'IBM Plex Sans';
    src: url('../fonts/IBM_Plex_Sans/IBMPlexSans-BoldItalic.woff2') format('woff2'),
        url('../fonts/IBM_Plex_Sans/IBMPlexSans-BoldItalic.woff') format('woff');
    font-weight: bold;
    font-style: italic;
    font-display: swap;
}

:root {
    --dark-yellow: #e4a74e;
    --light-yellow: #ffc000;
    --dark-gray: #bfbfbf;
    --gray: #d5d5d5;
    --light-gray: #ececec;
}

* {
    font-family: 'IBM Plex Sans', Helvetica, Arial, sans-serif;
    box-sizing: border-box;
}
body {
    position: relative;
    display: flex;
    justify-content: center;
    background-color: var(--light-gray);
}

/*-------------------------------HEADER--------------------------------*/
/*---------------------------------------------------------------------*/

header {
    display: flex;
    min-width: 100vw;
    align-items: center;
    height: 75px;
    background-color: black;
    position: fixed;
    top: 0px;
    left: 0px;
    z-index: 1000;
}

header a img {
    max-width: 80px;
    margin-left: 15px;
    border-radius: 3px;
}

nav {
    position: relative;
    display: inline-block;
    margin-left: auto;
}

.dropbtn {
    font-family: 'IBM Plex Sans', Helvetica, Arial, sans-serif;
    background-color: black;
    border: none;
    margin-right: 15px;
    color: var(--light-gray);
    font-size: 1.5rem;
    font-weight: normal;
    padding-right: 0px;
}

.dropbtn-active{
    color: var(--dark-yellow);
}

@media (min-width: 800px) {
  .dropbtn {
    display: none;
  }

  nav {
    display: flex;
    height: inherit;
  }
}

.dropdown-content {
    display: none;
    position: absolute;
    background: rgba(0, 0, 0, 0.8);
    z-index: 1;
    min-height: 100vh;
    top: 50px;
    left: calc(81px - 100vw);
    width: calc(100vw);
    backdrop-filter: blur(6px);
}

.nav-link {
    display: block;
    color: white;
    text-decoration: none;
    padding: 8px 15px 8px 0px;
    font-size: 1.5rem;
    font-weight: 300;
}

.dropdown-content a:first-child {
    margin-top: 30px;
}

.current {
    color: var(--dark-yellow);
    border-radius: 5px;
}

.display-dropdown {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    gap: 8px;
}

@media (min-width: 800px) {
  .dropdown-content {
    position: static;
    display: flex;
    flex-direction: row;
    align-items: center;
    min-height: 75px;
    height: 75px;
    width: fit-content;
  }

  .nav-link {
    color: var(--light-gray);
    font-size: 1.3rem;
    font-weight: normal;
    margin-left: 7px;
  }

  .current {
    color: var(--dark-yellow);
  }

  .dropdown-content a:first-child {
    margin-top: 0px;
  }
}

/*------------------------------CONTENT--------------------------------*/
/*---------------------------------------------------------------------*/

.content {
    position: absolute;
    top: 75px;
    width: 100vw;
    max-width: 1300px;
    min-height: calc(100vh - 75px);
    background-color: var(--light-gray);
    padding: 0px 15px;
}

.title {
    display: flex;
    justify-content: center;
}

h1 {
    font-size: clamp(2rem, 1rem + 3.5vw, 3.5rem);
    font-weight: 600;
}

.card {
    display: flex;
    flex-direction: column;
}

.subheading {
    border-bottom: 3px solid var(--dark-yellow);
    font-size: 1.2rem;
    padding-bottom: 3px;
    font-weight: 600;
}

.card-text > p {
    text-align: justify;
    font-size: 0.9rem;
}

.indent {
    text-indent: 10px;
}

.lead {
    font-weight: 600;
}

li {
    font-size: 0.9rem;
    margin: 0px 0px 7px -20px;
    text-align: justify;
    font-weight: 600;
}

.card-img {
    display: flex;
    align-items: center;
}

.card-img > img{
    max-width: 600px;
    width: 99%;
    margin-bottom: 10px;
    border: 1px solid black;
    border-radius: 2px;
}

